--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,5 @@
 # Visual Studio Code # 
-.vscode/* 
-!.vscode/settings.json 
-!.vscode/tasks.json 
-!.vscode/launch.json 
-!.vscode/extensions.json 
-.history
+.vscode/
 
 # celery 
 celerybeat-schedule.* 
@@ -27,6 +22,7 @@ media
 
 # Environments 
 .env 
+.env.db
 .venv 
 env/ 
 venv/ 
