--- a/.env.db.example
+++ b/.env.db.example
@@ -1,5 +1,5 @@
-POSTGRES_USER=
-POSTGRES_PASSWORD=
-POSTGRES_DB=
-TZ=
-POSTGRES_MAP_PORT=
+POSTGRES_USER=amaada
+POSTGRES_PASSWORD=amaada
+POSTGRES_DB=survey
+TZ=Asia/Tehran
+POSTGRES_MAP_PORT=5432
