--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,21 @@
 DEBUG=1
-SECRET_KEY=""
+SECRET_KEY="django-insecure-o+6$z$wcx6!df_g@$c77zi=gh5mwv889oc9aw_!48&!78dk#kx"
 DJANGO_ALLOWED_HOSTS=*
 DB_ENGINE_NAME=django.db.backends.postgresql
-DB_NAME=
-DB_USER=
-DB_PASSWORD=
-DB_HOST=
-DB_PORT=
+DB_NAME=survey
+DB_USER=amaada
+DB_PASSWORD=amaada
+DB_HOST=db
+DB_PORT=5432
 TZ=Asia/Tehran
 DOCKER_MODE=1
-DJANGO_MAP_PORT=
-DJANGO_SU_NAME=
-DJANGO_SU_EMAIL=
-DJANGO_SU_PASSWORD=
+DJANGO_MAP_PORT=8000
+DJANGO_SU_NAME=admin
+DJANGO_SU_EMAIL=admin@admin.com
+DJANGO_SU_PASSWORD=admin
+CELERY_BROKER_URL=redis://redis:6379/0
+CELERY_RESULT_BACKEND= redis://redis:6379/0
+CELERY_ACCEPT_CONTENT=json
+CELERY_TASK_SERIALIZER=json
+CELERY_RESULT_SERIALIZER=json
+CELERY_TIMEZONE=Asia/Tehran
